# rust-db-seeder

./: .gitignore  Cargo.toml  README.md
.sqlx/: query-1e8a8d0dc1f355c308ab39151e6be37c0db78a183fd7da4b11f2c6987d1fefe8.json
src/: lib.rs  main.rs
src/config/: mod.rs
src/db/: helpers.rs  mod.rs  operations.rs
src/generators/: data_generators.rs  helpers.rs  mod.rs
src/models/: mod.rs  types.rs
src/query/: mod.rs
