[package]
name = "db-seeder"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "rust_decimal"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
rand = { version = "0.8.5", features = ["std"] }
futures = "0.3.31"
argon2 = "0.5.3"
rand_core = "0.6.4"
dotenvy = "0.15.7"
rust_decimal = "1.34.3"
